Fri Aug 27 14:59:06 UTC 2010  Chad Elliott  <elliott_c@ociweb.com>

        * modules/GHSProjectCreator.pm:
        * modules/ProjectCreator.pm:
        * modules/VC8ProjectCreator.pm:
        * modules/WB30ProjectCreator.pm:

          Changed post_file_creation() to return an error status.  Returning
          undef indicates no error.  A string returned is used as the error
          message.

          Additionally, a valid_project_name() has been added and the list
          of invalid project name characters has been expanded to cover most
          of those that are not allowed by Visual Studio and those that do
          not work within a makefile.

Thu Aug 26 15:04:04 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * modules/ProjectCreator.pm:

          For types with more than one template, only issue the source_callback
          for the "visible" template.

        * modules/VC8WorkspaceCreator.pm:

          The "temporary hack" for vc10 is no longer needed due to this fix in
          ProjectCreator.pm.

Wed Aug 25 20:56:36 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * modules/ProjectCreator.pm:

          Added dependent_libs keyword to indicate dependency on a
          library.  It is similar to the dependent keyword, but should
          be used to make sure to rebuild the project when a library
          needs to be rebuilt for its dependent executable.

        * modules/TemplateParser.pm:

          - keywords was changed to use flag parameters to identify
          which flags were set for each keyword.  These parameters were
          also used throughout the module instead of hard-coded values.

          - A new flag was added called get_combined_type which indicates
          that the types get_xxx function doesn't have an intermediate
          return value that could be passed back into a doif_xxx function.

          - process_compound_if had functionality added that if there is a